views/videoviewer/style.css
/*VideoViewer*/
.videoViewer{
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
}

.videoViewer .fwd {
    opacity: 0;
}

.videoViewer .bkd {
    opacity: 0;
}

.videoViewer .infoBar{
    width:100%;
}

.videoViewer .vidRow {
    display: flex;
    flex-direction: row;
    flex-grow: 1;
}

.videoViewer video {
    max-width: 90vw;
    max-height: 90vh;
    min-width: 400px;
    object-position: top;
    object-fit: contain;
    flex-grow: 1;
}

.videoViewer .infoCol{
    flex-direction:column;
    display:flex;
    flex-grow: 0;
    max-width: 300px;
}

/*MetdataEditor*/

.videoViewer .metadataEditor{
    flex-grow: 0;
}


/*BookmarkEditor*/

.bookmarkEditor{
    min-width: 160px;
    flex-grow: 0;
    flex-direction:column;
    display:flex;
}


/*BookmarkList*/

.bookmarkList{
    max-width: 300px;
}

.bookmarkList .bookmarkLink {
    text-overflow: ellipsis;
}

/*VideoSearch*/
.videoSearchResult .videoLink{
    font-weight: bold;
}

.videoSearchResult a{
    text-decoration: none;
    color: darkslategray;
}

body {
    width:100%;
    height:100%;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    max-height: 100vh;
    max-width: 100vw;
    overflow: hidden;
}

html{
    width:100%;
    font-family: Calibri;
    height:100%;
}

